--- a/src/app/screens/qr-stats/qr-stats.component.html
+++ b/src/app/screens/qr-stats/qr-stats.component.html
@@ -108,85 +108,15 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td>12/07/2024 , 4:15:12 PM</td>
-        <td>Chrome</td>
-        <td>114.0 0.0 </td>
-        <td>Android</td>
-        <td>103.12.123.1234</td>
-        <td>Los Angeles</td>
-        <td>California</td>
-        <td>USA</td>
-      </tr>
-      <tr>
-        <td>12/07/2024 , 4:15:12 PM</td>
-        <td>Chrome</td>
-        <td>114.0 0.0 </td>
-        <td>Android</td>
-        <td>103.12.123.1234</td>
-        <td>Los Angeles</td>
-        <td>California</td>
-        <td>USA</td>
-      </tr>
-      <tr>
-        <td>12/07/2024 , 4:15:12 PM</td>
-        <td>Chrome</td>
-        <td>114.0 0.0 </td>
-        <td>Android</td>
-        <td>103.12.123.1234</td>
-        <td>Los Angeles</td>
-        <td>California</td>
-        <td>USA</td>
-      </tr>
-      <tr>
-        <td>12/07/2024 , 4:15:12 PM</td>
-        <td>Chrome</td>
-        <td>114.0 0.0 </td>
-        <td>Android</td>
-        <td>103.12.123.1234</td>
-        <td>Los Angeles</td>
-        <td>California</td>
-        <td>USA</td>
-      </tr>
-      <tr>
-        <td>12/07/2024 , 4:15:12 PM</td>
-        <td>Chrome</td>
-        <td>114.0 0.0 </td>
-        <td>Android</td>
-        <td>103.12.123.1234</td>
-        <td>Los Angeles</td>
-        <td>California</td>
-        <td>USA</td>
-      </tr>
-      <tr>
-        <td>12/07/2024 , 4:15:12 PM</td>
-        <td>Chrome</td>
-        <td>114.0 0.0 </td>
-        <td>Android</td>
-        <td>103.12.123.1234</td>
-        <td>Los Angeles</td>
-        <td>California</td>
-        <td>USA</td>
-      </tr>
-      <tr>
-        <td>12/07/2024 , 4:15:12 PM</td>
-        <td>Chrome</td>
-        <td>114.0 0.0 </td>
-        <td>Android</td>
-        <td>103.12.123.1234</td>
-        <td>Los Angeles</td>
-        <td>California</td>
-        <td>USA</td>
-      </tr>
-      <tr>
-        <td>12/07/2024 , 4:15:12 PM</td>
-        <td>Chrome</td>
-        <td>114.0 0.0 </td>
-        <td>Android</td>
-        <td>103.12.123.1234</td>
-        <td>Los Angeles</td>
-        <td>California</td>
-        <td>USA</td>
+      <tr *ngFor="let item of stats.scanData">
+        <td>{{ item.timestamp }}</td>
+        <td>{{ item.browser }}</td>
+        <td>{{ item.browserVersion }}</td>
+        <td>{{ item.os }}</td>
+        <td>{{ item.ipAddress }}</td>
+        <td>{{ item.city }}</td>
+        <td>{{ item.state }}</td>
+        <td>{{ item.country }}</td>
       </tr>
     </tbody>
   </table>
