--- a/src/app/screens/qr-stats/qr-stats.component.html
+++ b/src/app/screens/qr-stats/qr-stats.component.html
@@ -2,7 +2,7 @@
   <div class="top-banner">
     <div class="top-banner-content">
       <div class="top-banner-content-1">
-        <h3>The Title</h3>
+        <h3>{{ title }}</h3>
         <div>13265651231161616165156.......</div>
       </div>
       <div class="top-banner-qr-info">
