--- a/src/app/screens/qr-page/qr-page.component.css
+++ b/src/app/screens/qr-page/qr-page.component.css
@@ -397,7 +397,7 @@ h2 {
   gap: 15px;
   align-items: start;
   justify-content: space-between;
-  width: fit-content;
+  width: 100%;
 }
 
 .qr-table-head div {
@@ -456,6 +456,7 @@ h2 {
 .qr-table-item-container {
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 .qr-table-item {
@@ -463,7 +464,7 @@ h2 {
   gap: 15px;
   align-items: start;
   justify-content: space-between;
-  width: fit-content;
+  width: 100%;
   padding: 15px 0;
   border-top: 1px solid lightgray;
 }
@@ -558,7 +559,7 @@ h2 {
   gap: 60px;
 }
 
-.qr-table-item-detail-l {
+/* .qr-table-item-detail-l {
   width: 35%;
   height: 100%;
   display: flex;
@@ -668,7 +669,7 @@ h2 {
 
   color: var(--text, #636364);
 
-  /* Texi */
+
   font-family: Nunito;
   font-size: 18px;
   font-style: normal;
@@ -677,7 +678,7 @@ h2 {
   letter-spacing: 0.54px;
 
   width: fit-content;
-}
+} */
 
 .switch_box {
   position: relative;
@@ -738,7 +739,7 @@ h2 {
   background: linear-gradient(to left, #34836e 0%, #0dc997 100%);
 }
 
-.item-detail-r-1 {
+/* .item-detail-r-1 {
   width: 100%;
   display: flex;
   justify-content: end;
@@ -810,6 +811,115 @@ h2 {
   color: var(--dark-color, #181818);
   text-align: center;
 
+  font-family: Nunito;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 0.54px;
+} */
+
+.qr-table-item-detail-l {
+  width: 340px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.qr-table-item-detail-l img {
+  height: 346px;
+}
+
+.item-detail-l-2 {
+  display: flex;
+  gap: 20px;
+}
+
+.item-detail-l-2 button {
+  display: flex;
+  height: 52px;
+  width: 50%;
+  padding: 13.015px 19.522px;
+  justify-content: center;
+  align-items: center;
+  gap: 6.507px;
+  flex: 1 0 0;
+
+  color: white;
+  border: none;
+  border-radius: 8px;
+  background: linear-gradient(270deg, #2ebc96 0%, #1a9096 100%), #fff;
+  box-shadow: 0px 0px 6.507px 0px rgba(46, 188, 150, 0.2);
+}
+
+.item-detail-l-2 div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  border: 2px dotted gray;
+  border-radius: 8px;
+  width: 50%;
+}
+
+.qr-table-item-detail-r {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.item-detail-r-1 {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  height: 338px;
+}
+
+.r-1-1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.r-1-1 p {
+  color: #000;
+  font-family: "DM Sans";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.42px;
+}
+
+.r-1-1 p span {
+  color: #000;
+  font-family: "DM Sans";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+  letter-spacing: 0.54px;
+}
+
+.r-1-1-1 {
+  display: flex;
+  gap: 10px;
+}
+
+.r-1-1-1 span {
+  display: flex;
+  width: 418px;
+  padding: 15px;
+  align-items: center;
+  gap: 10px;
+  border-radius: 6px;
+  background: #fff;
+  box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.1);
+
+  color: var(--dark-color, #181818);
+  text-align: center;
   /* Texi */
   font-family: Nunito;
   font-size: 18px;
@@ -817,6 +927,232 @@ h2 {
   font-weight: 600;
   line-height: normal;
   letter-spacing: 0.54px;
+}
+
+.r-1-1-1 span p {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.r-1-1-1-copy {
+  display: flex;
+  height: 55px;
+  padding: 10px 15px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  width: fit-content;
+  border: none;
+
+  border-radius: 6px;
+  background: #fff;
+  box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.1);
+  white-space: nowrap;
+
+  color: #000;
+  font-family: "DM Sans";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+  letter-spacing: 0.42px;
+}
+
+.r-1-1-2 {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: start;
+}
+
+.r-1-1-2 span {
+  color: var(--dark-color, #181818);
+  text-align: center;
+
+  /* Texi */
+  font-family: Nunito;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 0.54px;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.r-1-1-2-edit {
+  height: fit-content;
+  width: fit-content;
+  background: transparent !important;
+  border: none;
+  box-shadow: none !important;
+  border: none;
+}
+
+.r-1-1-2 input {
+  border-radius: 8px;
+  background: #fff;
+
+  display: flex;
+  padding: 15px;
+  align-items: center;
+  gap: 10px;
+  flex: 1 0 0;
+  border: none;
+  box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.1);
+
+  color: var(--dark-color, #181818);
+
+  /* Texi */
+  font-family: Nunito;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 0.54px;
+
+  width: 100%;
+}
+
+.r-1-1-2-save {
+  display: flex;
+  padding: 5px 15px;
+  align-items: center;
+  gap: 5px;
+  color: white;
+  border: none;
+  border-radius: 38px;
+  background: linear-gradient(270deg, #2ebc96 0%, #1a9096 100%);
+
+  color: #fff;
+  text-align: center;
+  font-family: Nunito;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 0.36px;
+}
+
+.r-1-1-2-cancel {
+  display: flex;
+  padding: 5px 15px;
+  align-items: center;
+  gap: 5px;
+  color: white;
+  border: none;
+  border-radius: 38px;
+  background: red;
+
+  color: #fff;
+  text-align: center;
+  font-family: Nunito;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 0.36px;
+}
+
+.r-1-2 {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: space-between;
+  position: relative;
+}
+
+.r-1-2 button {
+  display: flex;
+  padding: 10px 15px;
+  width: fit-content;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  align-self: stretch;
+
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  border-radius: 5px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 10px 0px rgba(46, 188, 150, 0.2);
+
+  color: var(--dark-color, #181818);
+  text-align: center;
+  font-family: Nunito;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 0.42px;
+  background: white;
+}
+
+.r-1-2 div {
+  display: flex;
+  height: 115px;
+  width: 330px;
+  padding: 25px 15px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  align-self: stretch;
+
+  border-radius: 15px;
+  background: #fff;
+  box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.1);
+}
+
+.r-1-2 div p {
+  color: var(--dark-color, #181818);
+  text-align: center;
+  font-family: Nunito;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 0.72px;
+}
+
+.r-1-2 div span {
+  color: var(--text, #636364);
+  text-align: center;
+  font-family: Nunito;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 0.42px;
+}
+
+.item-detail-r-2 {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  width: 100%;
+}
+
+.item-detail-r-2 button {
+  display: flex;
+  padding: 10px 15px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex: 1 0 0;
+  align-self: stretch;
+
+  border-radius: 5px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 10px 0px rgba(46, 188, 150, 0.2);
+  background: white;
+  height: 50px;
 }
 
 .cus-modal {
