--- a/src/app/screens/qr-page/qr-page.component.html
+++ b/src/app/screens/qr-page/qr-page.component.html
@@ -456,8 +456,8 @@
           <ngx-qrcode-styling
             *ngIf="universalQrString.length > 0"
             #qrCodeElem
-            [width]="220"
-            [height]="220"
+            [width]="300"
+            [height]="300"
             [data]="universalQrString"
             [dotsOptions]="{ color: '#000', type: 'rounded' }"
             [backgroundOptions]="{ color: '#fff' }"
@@ -528,7 +528,7 @@
         <img src="../../../assets/close-icon.png" />
       </button>
     </div>
-    <div class="main" *ngIf="showUniversalQrGenerator">
+    <div class="main" *ngIf="showUniversalQrGenerator" style="height: 593px">
       <div class="main-left">
         <div>
           <p style="width: 100%; display: flex; justify-content: space-between">
@@ -600,12 +600,26 @@
             Download QR Code
           </button> -->
       </div>
+
       <div class="main-right-qr" *ngIf="universalQrData">
+        <!-- <div
+          *ngIf="showLoader"
+          style="
+            height: 300px;
+            width: 300px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+          "
+        >
+          <app-loader></app-loader>
+        </div> -->
+
         <ngx-qrcode-styling
           *ngIf="universalQrString.length > 0"
           #qrCodeElem
-          [width]="220"
-          [height]="220"
+          [width]="300"
+          [height]="300"
           [data]="universalQrString"
           [dotsOptions]="{ color: '#000', type: 'rounded' }"
           [backgroundOptions]="{ color: '#fff' }"
@@ -623,6 +637,7 @@
           "
         >
           <button
+            (click)="downloadGenQrCode()"
             style="
               display: flex;
               width: 60%;
@@ -680,6 +695,7 @@
               line-height: normal;
               letter-spacing: 0.54px;
             "
+            (click)="copyQrLink()"
           >
             <svg
               width="18"
@@ -1005,6 +1021,259 @@
 
         <div class="qr-table-item-detail" *ngIf="selectedItemIndex === i">
           <div class="qr-table-item-detail-l">
+            <div class="item-detail-l-1">
+              <img [src]="allQrCodes[i].qrCodeImage" />
+            </div>
+            <div class="item-detail-l-2">
+              <button>Customize Qr Code</button>
+              <div class="">
+                Status :
+                <label
+                  class="switch_box"
+                  (click)="
+                    updateQrStatus(
+                      i,
+                      item.status === 'active' ? 'inactive' : 'active'
+                    )
+                  "
+                >
+                  <input type="checkbox" [checked]="item.status === 'active'" />
+                  <span class="slider"></span>
+                </label>
+              </div>
+            </div>
+          </div>
+          <div class="qr-table-item-detail-r">
+            <div class="item-detail-r-1">
+              <div class="r-1-1">
+                <p>
+                  <span>Created: </span
+                  >{{ allQrCodes[i].createdAt | date : "MMM d, y, h:mm a" }}
+                </p>
+                <div class="r-1-1-1">
+                  <span
+                    ><p>{{ allQrCodes[i].qrCodeImage }}</p></span
+                  >
+                  <button class="r-1-1-1-copy" (click)="copyToClipboard()">
+                    <svg
+                      width="18"
+                      height="19"
+                      viewBox="0 0 18 19"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M14.1625 7.475H16.1875C16.7467 7.475 17.2 7.92831 17.2 8.4875L17.2 15.6C17.2 16.7046 16.3046 17.6 15.2 17.6L8.0875 17.6C7.52831 17.6 7.075 17.1467 7.075 16.5875V14.5625M9.1 1.4L3.025 1.4C1.90662 1.4 1 2.30662 1 3.425L1 9.5C1 10.6184 1.90662 11.525 3.025 11.525L9.1 11.525C10.2184 11.525 11.125 10.6184 11.125 9.5L11.125 3.425C11.125 2.30663 10.2184 1.4 9.1 1.4Z"
+                        stroke="black"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                      />
+                    </svg>
+                    Copy Link
+                  </button>
+                </div>
+                <div class="r-1-1-2">
+                  <span
+                    >Title
+                    <button
+                      class="r-1-1-2-edit"
+                      *ngIf="isQrListTitleEditable"
+                      (click)="isQrListTitleEditable = !isQrListTitleEditable"
+                    >
+                      <svg
+                        width="14"
+                        height="14"
+                        viewBox="0 0 14 14"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M0 11.247V13.6112C0 13.8289 0.171087 14 0.388835 14H2.75295C2.85405 14 2.95515 13.9611 3.02514 13.8833L11.5173 5.39897L8.60103 2.48271L0.116651 10.9671C0.0388836 11.0449 0 11.1382 0 11.247ZM13.7725 3.14373C14.0758 2.84044 14.0758 2.35051 13.7725 2.04722L11.9528 0.227468C11.6495 -0.0758228 11.1596 -0.0758228 10.8563 0.227468L9.43314 1.6506L12.3494 4.56687L13.7725 3.14373Z"
+                          fill="black"
+                        />
+                      </svg>
+                    </button>
+
+                    <div
+                      style="display: flex; gap: 10px"
+                      *ngIf="!isQrListTitleEditable"
+                    >
+                      <button class="r-1-1-2-save" (click)="updateQrTitle(i)">
+                        Save
+
+                        <svg
+                          width="13"
+                          height="14"
+                          viewBox="0 0 13 14"
+                          fill="none"
+                          xmlns="http://www.w3.org/2000/svg"
+                        >
+                          <path
+                            d="M7.79983 1.3999H2.89981C1.74001 1.3999 0.799805 2.34011 0.799805 3.49991V10.5C0.799805 11.6598 1.74001 12.6 2.89981 12.6H9.89984C11.0596 12.6 11.9999 11.6598 11.9999 10.5V6.64992M11.2998 3.14991L6.39983 8.04993L4.99982 6.64992"
+                            stroke="white"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                          />
+                        </svg>
+                      </button>
+                      <button class="r-1-1-2-cancel" (click)="cancelQrTitle(i)">
+                        Cancel
+                      </button>
+                    </div>
+                  </span>
+                  <input
+                    [disabled]="isQrListTitleEditable"
+                    [(ngModel)]="qrListTitle"
+                  />
+                </div>
+                <div class="r-1-1-2">
+                  <span
+                    >Prefilled Text
+
+                    <button
+                      class="r-1-1-2-edit"
+                      *ngIf="isQrListDescriptionEditable"
+                      (click)="
+                        isQrListDescriptionEditable =
+                          !isQrListDescriptionEditable
+                      "
+                    >
+                      <svg
+                        width="14"
+                        height="14"
+                        viewBox="0 0 14 14"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M0 11.247V13.6112C0 13.8289 0.171087 14 0.388835 14H2.75295C2.85405 14 2.95515 13.9611 3.02514 13.8833L11.5173 5.39897L8.60103 2.48271L0.116651 10.9671C0.0388836 11.0449 0 11.1382 0 11.247ZM13.7725 3.14373C14.0758 2.84044 14.0758 2.35051 13.7725 2.04722L11.9528 0.227468C11.6495 -0.0758228 11.1596 -0.0758228 10.8563 0.227468L9.43314 1.6506L12.3494 4.56687L13.7725 3.14373Z"
+                          fill="black"
+                        />
+                      </svg>
+                    </button>
+                    <div
+                      style="display: flex; gap: 10px"
+                      *ngIf="!isQrListDescriptionEditable"
+                    >
+                      <button class="r-1-1-2-save" (click)="updateQrText(i)">
+                        Save
+
+                        <svg
+                          width="13"
+                          height="14"
+                          viewBox="0 0 13 14"
+                          fill="none"
+                          xmlns="http://www.w3.org/2000/svg"
+                        >
+                          <path
+                            d="M7.79983 1.3999H2.89981C1.74001 1.3999 0.799805 2.34011 0.799805 3.49991V10.5C0.799805 11.6598 1.74001 12.6 2.89981 12.6H9.89984C11.0596 12.6 11.9999 11.6598 11.9999 10.5V6.64992M11.2998 3.14991L6.39983 8.04993L4.99982 6.64992"
+                            stroke="white"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                          />
+                        </svg>
+                      </button>
+                      <button class="r-1-1-2-cancel" (click)="cancelQrText(i)">
+                        Cancel
+                      </button>
+                    </div>
+                  </span>
+                  <input
+                    [disabled]="isQrListDescriptionEditable"
+                    [(ngModel)]="qrListDescription"
+                  />
+                </div>
+              </div>
+              <div class="r-1-2">
+                <span style="display: flex; height: 40px">
+                  <button (click)="toggleDetails(i)">
+                    Close
+                    <svg
+                      width="16"
+                      height="9"
+                      viewBox="0 0 16 9"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M1 7.89997L7.8 1.09998L14.6 7.89997"
+                        stroke="black"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
+                  </button>
+                </span>
+
+                <div>
+                  <p>1,124</p>
+                  <span>Total Scans </span>
+                </div>
+                <div>
+                  <p>1,124</p>
+                  <span>Total Bookings </span>
+                </div>
+              </div>
+            </div>
+            <div class="item-detail-r-2">
+              <button (click)="downloadQrCode(item.qrCodeImage, 'qrcode.jpg')">
+                <svg
+                  width="13"
+                  height="13"
+                  viewBox="0 0 13 13"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M0.946777 8.59524L0.946777 11.0068C0.946777 11.3722 1.09075 11.7227 1.34702 11.9812C1.6033 12.2396 1.95088 12.3848 2.31331 12.3848H10.5125C10.8749 12.3848 11.2225 12.2396 11.4788 11.9812C11.735 11.7227 11.879 11.3722 11.879 11.0068V8.59524M6.41365 0.615234V8.42397M6.41365 8.42397L9.53715 5.44028M6.41365 8.42397L3.29016 5.44028"
+                    stroke="black"
+                    stroke-width="0.976092"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+                Download Qr
+              </button>
+              <button (click)="directToQrStats()">
+                <svg
+                  width="17"
+                  height="17"
+                  viewBox="0 0 17 17"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M1.3999 1.40002V15.6H15.5999M4.9499 10.2751L8.05615 7.16887L10.2749 9.38762L15.1562 4.50637M11.8352 4.06252H15.6006V7.82787"
+                    stroke="black"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+                View Stats
+              </button>
+              <button (click)="deleteQr(i)">
+                <svg
+                  width="16"
+                  height="17"
+                  viewBox="0 0 16 17"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M1.55664 3.84123H15.1096M6.63899 12.3118V7.22946M10.0272 12.3118V7.22946M11.7213 15.7001H4.94488C4.00924 15.7001 3.25076 14.9416 3.25076 14.0059V4.68828C3.25076 4.22047 3.63 3.84123 4.09782 3.84123H12.5684C13.0362 3.84123 13.4155 4.22047 13.4155 4.68828V14.0059C13.4155 14.9416 12.657 15.7001 11.7213 15.7001ZM6.63899 3.84123H10.0272C10.495 3.84123 10.8743 3.46198 10.8743 2.99417V2.14711C10.8743 1.67929 10.495 1.30005 10.0272 1.30005H6.63899C6.17118 1.30005 5.79193 1.67929 5.79193 2.14711V2.99417C5.79193 3.46198 6.17118 3.84123 6.63899 3.84123Z"
+                    stroke="black"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+                Delete
+              </button>
+            </div>
+          </div>
+          <!-- <div class="qr-table-item-detail-l">
             <div class="item-detail-qr">
               <img [src]="allQrCodes[i].qrCodeImage" />
             </div>
@@ -1138,28 +1407,23 @@
                 </svg>
                 Download QR
               </button>
-              <button>
-                <a
-                  href="/chatbot/QR-page/QR-stats"
-                  style="color: black; text-decoration: none"
+              <button (click)="directToQrStats()">
+                <svg
+                  width="22"
+                  height="22"
+                  viewBox="0 0 22 22"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
                 >
-                  <svg
-                    width="22"
-                    height="22"
-                    viewBox="0 0 22 22"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M1.5 1.47778V20.6778H20.7M6.3 13.4779L10.5 9.27791L13.5 12.2779L20.1 5.67791M15.6097 5.07778H20.7009V10.169"
-                      stroke="black"
-                      stroke-width="1.5"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    />
-                  </svg>
-                  View Stats
-                </a>
+                  <path
+                    d="M1.5 1.47778V20.6778H20.7M6.3 13.4779L10.5 9.27791L13.5 12.2779L20.1 5.67791M15.6097 5.07778H20.7009V10.169"
+                    stroke="black"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+                View Stats
               </button>
               <button (click)="deleteQr(i)">
                 <svg
@@ -1180,7 +1444,7 @@
                 Delete
               </button>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
