--- a/src/app/components/customer-details/customer-details.component.html
+++ b/src/app/components/customer-details/customer-details.component.html
@@ -1,28 +1,33 @@
 <div class="customer-details-container">
     <div class="search-bar">
-        <h2>Customer details</h2>
+        <h2>Recent Bookings</h2>
         <input type="text" placeholder="Search User" />
         <button>See all</button>
     </div>
     <table>
         <thead>
             <tr>
-                <th>Name</th>
-                <th>Address</th>
                 <th>Date & Time</th>
-                <th>Bookings</th>
-                <th>Drop-off Point</th>
-                <th>Vehicle</th>
+                <th>Booking ID</th>
+                <th>Customer Name</th>
+                <th>Phone Number</th>
+                <!-- <th>Pickup Date/Time</th> -->
+                <th>Vehicle type</th>
+                <th>Price</th>
+                <!-- <th>Status</th> -->
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let customer of customers">
-                <td>{{ customer.name }}</td>
-                <td>{{ customer.address }}</td>
-                <td>{{ customer.date }}</td>
-                <td>{{ customer.bookings }}</td>
-                <td>{{ customer.dropOff }}</td>
-                <td>{{ customer.vehicle }}</td>
+            <tr *ngFor="let booking of bookings">
+                <td>
+                    {{ booking.createdAt | date }},
+                    {{ booking.createdAt | date : "HH:mm a" }}
+                </td>
+                <td>{{ booking.booking_id }}</td>
+                <td>{{ booking.user_name ? booking.user_name : "-" }}</td>
+                <td>{{ booking.phone }}</td>
+                <td>{{ booking.vehicle_type }}</td>
+                <td>{{ booking.price }}</td>
             </tr>
         </tbody>
     </table>
