--- a/src/app/screens/qr-stats/qr-stats.component.css
+++ b/src/app/screens/qr-stats/qr-stats.component.css
@@ -6,10 +6,9 @@
 
 .top-banner {
   width: 100%;
-  /* aspect-ratio: 1482/332; */
+  aspect-ratio: 1482/236;
   height: fit-content;
   overflow: hidden;
-  height: fit-content;
   position: relative;
   margin-top: 20px;
   border-radius: 10px;
@@ -30,7 +29,7 @@
   height: 100%;
   display: flex;
   align-items: center;
-  gap: 15px;
+  gap: 65px;
 }
 
 .top-banner-content h3 {
@@ -50,7 +49,7 @@
   border-radius: 8px;
   border: 1px solid rgba(255, 255, 255, 0.75);
   background: rgba(255, 255, 255, 0);
-  box-shadow: 0px 7.067px 17.667px 0px rgba(0, 0, 0, 0.25);
+  /* box-shadow: 0px 7.067px 17.667px 0px rgba(0, 0, 0, 0.25); */
   display: flex;
   width: 279px;
   padding: 15px;
@@ -155,7 +154,7 @@ tr {
   width: 100%;
   border-collapse: separate;
   border-spacing: 20px;
-  border-top: 1px solid lightgray;
+  border-bottom: 1px solid lightgray;
 }
 
 td {
