--- a/src/app/screens/qr-stats/qr-stats.component.html
+++ b/src/app/screens/qr-stats/qr-stats.component.html
@@ -3,7 +3,21 @@
     <div class="top-banner-content">
       <div class="top-banner-content-1">
         <h3>{{ title }}</h3>
-        <div>13265651231161616165156.......</div>
+        <div
+          style="
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            width: fit-content;
+          "
+        >
+          {{ qrId
+          }}<img
+            style="width: 15px; height: 15px; cursor: pointer"
+            (click)="copyToClipboard(qrId)"
+            src="../../../assets/copy.png"
+          />
+        </div>
       </div>
       <div class="top-banner-qr-info">
         <div class="top-banner-qr-info-1">
@@ -87,14 +101,10 @@
         </div>
       </div>
     </div>
-    <img class="top-banner-main-img" src="../../../assets/qr-banner-img.png" />
-    <img
-      class="top-banner-main-img"
-      src="../../../assets/qr-banner-gradient.png"
-    />
+    <img class="top-banner-main-img" src="../../../assets/qr-new-banner.png" />
   </div>
 
-  <table>
+  <table style="margin-top: 100px">
     <thead>
       <tr>
         <td>Date & Time</td>
@@ -109,7 +119,7 @@
     </thead>
     <tbody>
       <tr *ngFor="let item of stats.scanData">
-        <td>{{ item.timestamp }}</td>
+        <td>{{ item.createdAt | date : "MM/dd/yyyy, h:mm:ss a" }}</td>
         <td>{{ item.browser }}</td>
         <td>{{ item.browserVersion }}</td>
         <td>{{ item.os }}</td>
