--- a/src/app/screens/qr-page/qr-page.component.css
+++ b/src/app/screens/qr-page/qr-page.component.css
@@ -146,14 +146,15 @@ h2 {
   width: 40%;
   aspect-ratio: 438/354;
   flex: 1;
-  /* aspect-ratio: 354/438; */
   border: 2px dashed lightgray;
+  height: 354px;
 }
 
 .main-right div {
   width: 100%;
   display: flex;
   justify-content: end;
+  height: 220px;
 }
 
 .main-right button {
@@ -176,7 +177,7 @@ h2 {
 }
 
 .main-right .qr-code {
-  height: 100%;
+  height: 220px;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
@@ -191,7 +192,7 @@ h2 {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 100%;
+  height: 220px;
 }
 
 .main-right button {
@@ -249,6 +250,7 @@ h2 {
   width: 80%;
   flex: 1;
   /* aspect-ratio: 354/438; */
+  height: 368px;
   border: 2px dashed lightgray;
 }
 
@@ -396,7 +398,7 @@ h2 {
   gap: 15px;
   align-items: start;
   justify-content: space-between;
-  width: 100%;
+  width: 1534px;
 }
 
 .qr-table-head div {
@@ -463,7 +465,7 @@ h2 {
   gap: 15px;
   align-items: start;
   justify-content: space-between;
-  width: 100%;
+  width: 1534px;
   padding: 35px 0;
   border-top: 1px solid lightgray;
 }
@@ -1236,7 +1238,7 @@ h2 {
 .cus-modal-3 {
   display: flex;
   gap: 10px;
-  flex-direction: column;
+  /* flex-direction: column; */
 }
 
 .cus-modal-3-settings,
