--- a/src/app/screens/app-settings/app-settings.component.html
+++ b/src/app/screens/app-settings/app-settings.component.html
@@ -50,7 +50,7 @@
           </label>
         </div>
       </div>
-      <div class="h">Outgoing SMS Settings</div>
+      <div class="h">SMS App/Gateway Configuration</div>
       <div class="toggles">
         <div
           *ngFor="let toggle of togglesData; let i = index"
@@ -71,7 +71,7 @@
         </div>
       </div>
 
-      <div class="h">Outgoing SMS Settings</div>
+      <div class="h">SMS App/Gateway Configuration</div>
       <div class="credentials_tabs">
         <label>
           <input type="radio" name="tab" id="tab" />
