--- a/src/app/screens/customers/customers.component.css
+++ b/src/app/screens/customers/customers.component.css
@@ -335,7 +335,7 @@
 
 .r_item:nth-child(3) strong,
 .r_item:nth-child(4) strong {
-  max-width: 160px;
+  max-width: 165px;
 }
 
 .icons_badge {
@@ -399,6 +399,7 @@
   border-bottom: 1px solid #333;
   padding: 0.5rem;
   padding-right: 1.5rem;
+  width: 100%;
 }
 
 .tsa_search {
