--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -105,7 +105,7 @@
               <span>Chat Flow</span>
             </li>
           </a>
-          <a [routerLink]="'/chatbot/QR-page'">
+          <a [routerLink]="'/chatbot/QR-code'">
             <li
               (click)="setCurrentSubItem('qrcode')"
               [class.active]="currentSubItem === 'qrcode'"
