--- a/src/app/screens/bookings/bookings.component.css
+++ b/src/app/screens/bookings/bookings.component.css
@@ -99,7 +99,12 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  min-width: 1700px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  max-width: 1554px;
+  width: 100%;
+  min-width: fit-content;
 }
 
 .table_header,
@@ -108,6 +113,7 @@
   background-color: #ffffff;
   box-shadow: 0 0 20px #eeeeee80;
   align-items: center;
+  justify-content: space-between;
   border-radius: 0.5rem;
   position: relative;
 }
@@ -136,15 +142,45 @@
 }
 
 .th_item:nth-child(2) {
-  min-width: 210px;
+  min-width: 140px;
+  max-width: 140px;
 }
 
 .th_item:nth-child(3) {
-  min-width: 200px;
+  min-width: 70px;
+  max-width: 70px;
 }
 
 .th_item:nth-child(4) {
-  min-width: 300px;
+  min-width: 200px;
+  max-width: 200px;
+}
+
+.th_item:nth-child(5) {
+  min-width: 100px;
+  max-width: 100px;
+}
+
+.th_item:nth-child(6) {
+  min-width: 130px;
+  max-width: 130px;
+}
+
+.th_item:nth-child(7) {
+  min-width: 100px;
+  max-width: 100px;
+}
+
+.th_item:nth-child(8) {
+  min-width: 150px;
+  max-width: 150px;
+}
+
+.th_item:nth-child(9) {
+  min-width: 70px;
+  max-width: 70px;
+  display: flex;
+  justify-content: center;
 }
 
 .th_item.amount {
