--- a/src/app/screens/home/home.component.css
+++ b/src/app/screens/home/home.component.css
@@ -734,6 +734,7 @@ td {
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 3px;
 }
 
 /* .at_item div:nth-child(7) {
@@ -771,8 +772,8 @@ td {
 .s_dot_r {
   background-color: #ff515c;
   border-radius: 50%;
-  height: 10px;
-  width: 10px;
+  height: 8px;
+  width: 8px;
   display: inline-block;
   margin-bottom: 0;
 }
@@ -780,8 +781,8 @@ td {
 .s_dot_g {
   background-color: #2ebc96;
   border-radius: 50%;
-  height: 10px;
-  width: 10px;
+  height: 8px;
+  width: 8px;
   display: inline-block;
   margin-bottom: 0;
 }
