--- a/src/app/screens/qr-page/qr-page.component.css
+++ b/src/app/screens/qr-page/qr-page.component.css
@@ -55,6 +55,7 @@ h2 {
   display: flex;
   align-items: center;
   gap: 10px;
+  font-size: 2rem;
 }
 
 .qr-sec img {
@@ -69,7 +70,9 @@ h2 {
   justify-content: space-around;
   align-items: stretch;
   gap: 35px;
-  padding: 40px 35px;
+  padding: 0px 35px;
+  height: 400px;
+  align-items: center;
 }
 
 .main-left {
@@ -291,7 +294,7 @@ h2 {
   height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 26px;
+  gap: 35px;
 }
 
 .qr-banner h3 {
@@ -388,7 +391,7 @@ h2 {
   flex-direction: column;
   gap: 2px;
   width: 100%;
-  height: 70vh;
+  /* height: 70vh; */
   overflow: scroll;
   margin-top: 20px;
 }
@@ -398,22 +401,23 @@ h2 {
   gap: 15px;
   align-items: start;
   justify-content: space-between;
-  width: 1534px;
+  width: 100%;
+  padding-bottom: 1em;
 }
 
 .qr-table-head div {
   color: var(--bold-text, #737791);
   text-align: center;
   font-family: Nunito;
-  font-size: 18px;
+  font-size: 0.9rem;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
 }
 
 .qr-table-head div:nth-child(1) {
-  width: 80px;
-  min-width: 80px;
+  width: 40px;
+  min-width: 40px;
 }
 
 .qr-table-head div:nth-child(2) {
@@ -422,8 +426,8 @@ h2 {
 }
 
 .qr-table-head div:nth-child(2) {
-  width: 250px;
-  min-width: 250px;
+  width: 160px;
+  min-width: 160px;
 }
 
 .qr-table-head div:nth-child(3) {
@@ -432,18 +436,18 @@ h2 {
 }
 
 .qr-table-head div:nth-child(4) {
-  width: 250px;
-  min-width: 250px;
+  width: 200px;
+  min-width: 200px;
 }
 
 .qr-table-head div:nth-child(5) {
-  width: 100px;
-  min-width: 100px;
+  width: 118px;
+  min-width: 118px;
 }
 
 .qr-table-head div:nth-child(6) {
-  width: 200px;
-  min-width: 200px;
+  width: 118px;
+  min-width: 118px;
 }
 
 .qr-table-body {
@@ -457,15 +461,17 @@ h2 {
 .qr-table-item-container {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  min-width: 100%;
+  max-width: fit-content;
 }
 
 .qr-table-item {
   display: flex;
   gap: 15px;
-  align-items: start;
+  align-items: center;
   justify-content: space-between;
-  width: 1534px;
+  max-width: 1534px;
+  min-width: fit-content;
   padding: 35px 0;
   border-top: 1px solid lightgray;
 }
@@ -474,7 +480,7 @@ h2 {
   display: flex;
   align-items: start;
   justify-content: center;
-  width: 80px;
+  width: 40px;
 }
 
 .qr-table-item div:nth-child(1) div {
@@ -490,20 +496,20 @@ h2 {
 .qr-table-item div:nth-child(2) {
   color: var(--text, #636364);
   font-family: Nunito;
-  font-size: 18px;
+  font-size: 0.9rem;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
   letter-spacing: 0.54px;
-  width: 250px;
+  width: 160px;
   text-align: center;
-  min-width: 250px;
+  min-width: 160px;
 }
 
 .qr-table-item div:nth-child(3) {
   color: var(--text, #636364);
   font-family: Nunito;
-  font-size: 18px;
+  font-size: 0.9rem;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
@@ -511,31 +517,40 @@ h2 {
   width: 200px;
   min-width: 200px;
   text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  direction: ltr;
 }
 
 .qr-table-item div:nth-child(4) {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 250px;
-  min-width: 250px;
+  /* display: flex; */
+  /* align-items: center; */
+  /* justify-content: center; */
+  width: 200px;
+  min-width: 200px;
   text-align: center;
+  direction: ltr;
 
   color: var(--text, #636364);
   font-family: Nunito;
-  font-size: 15px;
+  font-size: 0.9rem;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
   letter-spacing: 0.45px;
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .qr-table-item div:nth-child(5) {
-  width: 100px;
-  min-width: 100px;
+  width: 118px;
+  min-width: 118px;
   color: var(--text, #636364);
   font-family: Nunito;
-  font-size: 14px;
+  font-size: 0.9rem;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
@@ -548,14 +563,15 @@ h2 {
   align-items: start;
   justify-content: center;
   gap: 10px;
-  width: 200px;
-  min-width: 200px;
+  width: 118px;
+  min-width: 118px;
 }
 
 .qr-table-item-detail {
   padding: 20px 30px;
   background: #f5f5f5;
-  width: 100%;
+  max-width: 1534px;
+  min-width: 1333px;
   display: flex;
   gap: 60px;
 }
@@ -858,7 +874,7 @@ h2 {
   align-items: center;
   justify-content: center;
   gap: 10px;
-  border: 2px dotted gray;
+  border: 2px solid lightgray;
   border-radius: 8px;
   width: 50%;
 }
@@ -877,11 +893,17 @@ h2 {
   height: 338px;
 }
 
+.item-detail-l-1 div {
+  width: 346px;
+  height: 346px;
+}
+
 .r-1-1 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   gap: 10px;
+  width: 60%;
 }
 
 .r-1-1 p {
@@ -911,7 +933,7 @@ h2 {
 
 .r-1-1-1 span {
   display: flex;
-  width: 418px;
+  width: 100%;
   padding: 15px;
   align-items: center;
   gap: 10px;
@@ -1161,6 +1183,7 @@ h2 {
   flex-direction: column;
   gap: 20px;
   padding: 24px;
+  width: 100%;
 }
 
 .cus-modal-1 {
@@ -1172,7 +1195,7 @@ h2 {
 .cus-modal-1 h1 {
   color: #000;
   font-family: "DM Sans";
-  font-size: 34px;
+  font-size: 2rem;
   font-style: normal;
   font-weight: 700;
   line-height: 42px; /* 123.529% */
@@ -1196,7 +1219,8 @@ h2 {
   background: linear-gradient(270deg, #2ebc96 0%, #1a9096 100%);
   border: none;
   display: flex;
-  height: 52px;
+  font-size: 10px;
+  height: 40px;
   padding: 10px 20px;
   justify-content: center;
   align-items: center;
@@ -1249,16 +1273,21 @@ h2 {
   padding: 24px;
 }
 
+.cus-modal-3-qr {
+  width: 250px !important;
+}
+
 .cus-modal-3-settings {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  width: 100%;
 }
 
 .cus-modal-setting-h {
   color: #000;
   font-family: "DM Sans";
-  font-size: 20px;
+  font-size: 16px;
   font-style: normal;
   font-weight: 400;
   line-height: 42px; /* 210% */
@@ -1279,18 +1308,20 @@ h2 {
   justify-content: center;
   color: #000;
   font-family: "DM Sans";
-  font-size: 14px;
+  font-size: 11px;
   font-style: normal;
   font-weight: 500;
   line-height: 42px; /* 300% */
   letter-spacing: -0.28px;
   text-transform: capitalize;
   white-space: nowrap;
+  cursor: pointer;
 }
 
 .cus-modal-3-0-shape div img {
-  width: 55px;
-  height: 55px;
+  width: 40px;
+  height: 40px;
+  padding: 5px;
 }
 
 .cus-modal-3-0-color {
@@ -1306,8 +1337,8 @@ h2 {
 
 .cus-modal-3-0-color div span {
   display: inline-block;
-  height: 56px;
-  width: 56px;
+  height: 40px;
+  width: 40px;
   border-radius: 50%;
   border: 1px solid lightgray;
   display: flex;
@@ -1334,9 +1365,9 @@ h2 {
   letter-spacing: -0.4px;
 }
 
-.cus-modal-3-0-gradients div button {
-  padding: 15px;
-  border-radius: 20px;
+.cus-modal-3-0-gradients div label {
+  padding: 10px;
+  border-radius: 50%;
   border: 1px solid lightgray;
   background: white;
   aspect-ratio: 1/1;
@@ -1347,11 +1378,153 @@ h2 {
 
 .cus-modal-3-0-gradients div span {
   display: inline-block;
-  height: 56px;
-  width: 56px;
+  height: 40px;
+  width: 40px;
   border-radius: 50%;
   border: 1px solid lightgray;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.selected-shape {
+  border-radius: 8px;
+  border: 1px solid #1a9096;
+}
+
+#cQrCode {
+  height: 200px !important;
+  display: inline-block;
+}
+
+/* @media (max-width: 1280px) {
+  .qr-table-item-detail {
+    max-width: fit-content;
+    min-width: fit-content;
+  }
+} */
+
+div:has(.qr-table-item-detail) {
+  width: 100%;
+  border-radius: 6px;
+}
+
+/* .item-detail-l-1 img {
+  border: 8px solid greenyellow;
+  border-radius: 10px;
+} */
+@media (max-width: 1408px) {
+  .qr-table-item-detail {
+    /* min-width: 100%;
+    max-width: 100%; */
+    /* max-width: fit-content;
+    min-width: fit-content; */
+    width: 100%;
+    max-width: 100%;
+    min-width: 100%;
+    gap: 6px;
+  }
+  .qr-table-item-detail-l img,
+  .item-detail-l-1 div {
+    height: 226px;
+    width: 226px;
+  }
+  .qr-table-item-detail-r {
+    width: 100%;
+  }
+  .r-1-2 div {
+    width: 200px;
+    height: 80px;
+    padding: 0;
+  }
+  .r-1-2 div span {
+    font-size: 0.9rem;
+  }
+  .r-1-2 div p {
+    font-size: 1.2rem;
+  }
+  .r-1-1 {
+    gap: 0;
+    font-size: 0.9rem;
+  }
+  .r-1-1 * {
+    font-size: 0.9rem !important;
+  }
+  .r-1-1 p {
+    font-size: 0.9rem;
+  }
+  .r-1-1 p span {
+    font-size: 0.9rem;
+  }
+  .item-detail-r-1 {
+    height: 232px;
+    margin-bottom: 10px;
+    gap: 10px;
+    width: 100%;
+  }
+  .r-1-1-2,
+  .r-1-1-1 * {
+    font-size: 0.9rem;
+  }
+  .r-1-1-1 {
+    height: 35px;
+  }
+  .r-1-1-1-copy {
+    height: 35px;
+  }
+  .r-1-1-1 span {
+    width: 100%;
+    padding: 10px;
+  }
+  .r-1-1-2 input {
+    padding: 10px;
+  }
+  .item-detail-l-2 button {
+    padding-left: 0;
+    padding-right: 0;
+    font-size: 10px;
+    height: 35px;
+  }
+  .item-detail-r-2 {
+    width: 100%;
+  }
+  .item-detail-r-2 button {
+    height: 35px;
+  }
+}
+
+@media (max-width: 1600px) {
+  .qr-banner div {
+    gap: 10px;
+  }
+  .qr-banner h3 {
+    font-size: 1.5rem;
+  }
+  .qr-banner p {
+    font-size: 1.1rem;
+  }
+}
+
+.load {
+  border: 2px solid #f3f3f3;
+  border-top: 2px solid transparent;
+  border-radius: 50%;
+  width: 16px;
+  height: 16px;
+  animation: spin 0.6s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+input[type="color"] {
+  border: none;
+  height: 0;
+  width: 0;
 }
