--- a/src/app/screens/qr-stats/qr-stats.component.html
+++ b/src/app/screens/qr-stats/qr-stats.component.html
@@ -2,7 +2,7 @@
   <div class="top-banner">
     <div class="top-banner-content">
       <div class="top-banner-content-1">
-        <h3>{{ title }}</h3>
+        <h3 title="{{ title }}">{{ title }}</h3>
         <div
           style="
             display: flex;
@@ -121,7 +121,7 @@
     <tbody>
       <tr *ngFor="let item of stats.scanData">
         <td>{{ item.createdAt | date : "MM/dd/yyyy, h:mm:ss a" }}</td>
-        <td>{{ item._id }}</td>
+        <td>{{ item.timestamp }}</td>
         <td>{{ item.browser }}</td>
         <td>{{ item.browserVersion }}</td>
         <td>{{ item.os }}</td>
