--- a/src/app/screens/block-list/block-list.component.html
+++ b/src/app/screens/block-list/block-list.component.html
@@ -32,7 +32,7 @@
           fill="#636364"
         />
       </svg>
-      <span style="font-size: 14px">Important Message:</span>
+      <span style="font-size: 13px">Important Note:</span>
     </span>
     <p style="font-size: 13px; font-weight: 400; color: black">
       Adding phone numbers to blocked list will prevent that number from
