--- a/src/app/screens/qr-page/qr-page.component.css
+++ b/src/app/screens/qr-page/qr-page.component.css
@@ -79,7 +79,7 @@ h2 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 50px;
+  gap: 15px;
   width: 60%;
 }
 
@@ -120,7 +120,7 @@ h2 {
   border: 1px solid gray;
   border-radius: 10px;
   width: 100%;
-  height: 200px;
+  height: 100px;
   resize: none;
 }
 
@@ -841,6 +841,7 @@ h2 {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  justify-content: end;
 }
 
 .qr-table-item-detail-l img {
